feat: split node into driver and adapter (#11) (#13)
* feat: split node into driver and adapter (#11)

* feat: add vtl command converter

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix: dependency

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: move to vtl_adapter directory

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: add vtl_adapter cmakelists.txt and package.xml

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix: remove converter from v2i_interface cmakelists.txt and package.yml

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* chore: add new line for v2i_interface cmake and package

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: rename include directory

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix: package path

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix: comment out gtest

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: update dependencies

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

---------

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix: remove const shared ptr on subscriber

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* fix define name (#14)

Signed-off-by: 1222-takeshi <m.takeshi1995@gmail.com>

* fix build error (#15)

Signed-off-by: 1222-takeshi <m.takeshi1995@gmail.com>

* fix: condition for checking customtags

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: add status converter (#17)

* feat: move command_converter into vtl adapter node

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: add state converter and aggregate into adapter node

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

---------

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: apply adapter to v2i interface (#18)

* feat: apply adapter to v2i interface

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

* feat: add timeout

Signed-off-by: Yuma Nihei <yuma.nihei@tier4.jp>

--------

--- a/v2i_command_muxer/config/topic_definition.yaml
+++ b/v2i_command_muxer/config/topic_definition.yaml
@@ -1,5 +1,3 @@
-#!/bin/bash
-
 # Copyright 2023 TIER IV, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -14,10 +12,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-source vtl_test.default.env
-
-export VTL_ID=3001
-export INFRA_ID=2
-export INFRA_RESPONSE_TYPE=ALWAYS
-
-source update_vtl_command_msg.bash
+/**:
+  ros__parameters:
+    input_topics : [
+      "/cargo_loading/infrastructure_commands",
+      "/v2i_gate/infrastructure_commands"
+    ]
+    output_topic : "/v2i/infrastructure_commands"
