--- a/v2i_tester/config/vtl_test.default.env
+++ b/v2i_tester/config/vtl_test.default.env
@@ -1,6 +1,6 @@
 #!/bin/bash
 
-# Copyright 2023 Tier IV, Inc.
+# Copyright 2023 TIER IV, Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -27,3 +27,5 @@ export INFRA_PERMIT_STATE=DRIVING
 export INFRA_REQUEST_BIT=0x01
 export INFRA_EXPECT_BIT=0x01
 export LANELET_TURN_DIRECTION=straight
+export LANELET_SUBTYPE=solid
+export LANELET_LANE_ID=120
