--- a/vtl_adapter/CMakeLists.txt
+++ b/vtl_adapter/CMakeLists.txt
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.5)
-project(v2i_tester)
+project(vtl_adapter)
 
 ### Compile options
 if(NOT CMAKE_CXX_STANDARD)
@@ -25,35 +25,31 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic -Werror)
 endif()
 
-## Dependencies
+### Dependencies
 find_package(ament_cmake_auto REQUIRED)
 ament_auto_find_build_dependencies()
 
 # Generate exe file
-#ament_auto_add_library(**
-#  SHARED
-#  src/**
-#)
+ament_auto_add_library(vtl_adapter
+  SHARED
+  src/vtl_adapter.cpp
+  src/vtl_state_converter.cpp
+  src/vtl_command_converter.cpp
+  src/interface_converter_data_pipeline.cpp
+  src/eve_vtl_interface_converter.cpp
+  src/eve_vtl_attribute.cpp
+)
 
-#rclcpp_components_register_node(**
-#  PLUGIN "**"
-#  EXECUTABLE *****
-#)
-
-file(GLOB SCRIPT_FILES scripts/*.bash)
-file(GLOB ENV_FILES config/*.env)
-install(
-  PROGRAMS
-  ${SCRIPT_FILES}
-  ${ENV_FILES}
-  DESTINATION
-  lib/${PROJECT_NAME})
+rclcpp_components_register_node(vtl_adapter
+  PLUGIN "vtl_adapter::VtlAdapterNode"
+  EXECUTABLE vtl_adapter_node
+)
 
 if(BUILD_TESTING)
   find_package(ament_lint_auto REQUIRED)
   ament_lint_auto_find_test_dependencies()
 
-  # ament_add_gtest(**
+  # ament_add_gtest(test_vtl_command_converter
   #   test/src/test_**.cpp
   #   test/src/test_**.cpp
   # )
@@ -69,5 +65,5 @@ endif()
 
 ament_auto_package(
   INSTALL_TO_SHARE
-  # launch
+  launch
 )
